# Pluck

./: .gitignore  CLAUDE.md  README.md  TAB_UI_DESIGN.md  pluck.yaml.example  pyproject.toml
docs/: model-management-redesign.md
src/pluck/: __init__.py  __main__.py  cli.py  config.py  env.py  installer.py  interactive.py  io_utils.py  model.py  model_config.py  providers.py  repo.py  tab_ui.py
tests/: test_config.py  test_env.py  test_installer.py  test_model.py  test_providers.py
